--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,69 @@
-Hello
+<!--Start your project here-->                            
+<div class="container">
+    <div class="row">
+            <div class="col-md-6">
+
+                <!--Card-->
+                <div class="card">
+
+                    <!--Card image-->
+                    <div class="view overlay hm-white-slight">
+                        <img src="http://mdbootstrap.com/images/reg/reg%20(2).jpg" class="img-fluid" alt="">
+                        <a>
+                            <div class="mask"></div>
+                        </a>
+                    </div>
+                    <!--/.Card image-->
+
+                    <!--Card content-->
+                    <div class="card-block">
+                        <!--Title-->
+                        <h4 class="card-title">Card title</h4>
+                        <!--Text-->
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a class="btn btn-primary">Button</a>
+                    </div>
+                    <!--/.Card content-->
+
+                </div>
+                <!--/.Card-->
+
+            </div>
+        </div>
+</div>
+
+<button type="button" class="btn btn-primary">Primary</button>
+
+<!-- Indicates a dangerous or potentially negative action -->
+<button type="button" class="btn btn-default">Default</button>
+
+<!-- Secondary, outline button -->
+<button type="button" class="btn btn-secondary">Secondary</button>
+
+<!-- Indicates a successful or positive action -->
+<button type="button" class="btn btn-success">Success</button>
+
+<!-- Contextual button for informational alert messages -->
+<button type="button" class="btn btn-info">Info</button>
+
+<!-- Indicates caution should be taken with this action -->
+<button type="button" class="btn btn-warning">Warning</button>
+
+<!-- Indicates a dangerous or potentially negative action -->
+<button type="button" class="btn btn-danger">Danger</button>
+
+
+<a class="btn primary-rounded-outline waves-effect">Primary</a>
+<a class="btn default-rounded-outline waves-effect">Default</a>
+<a class="btn secondary-rounded-outline waves-effect">Secondary</a>
+<a class="btn success-rounded-outline waves-effect">Success</a>
+<a class="btn info-rounded-outline waves-effect">Info</a>
+<a class="btn warning-rounded-outline waves-effect">Warning</a>
+<a class="btn danger-rounded-outline waves-effect">Danger</a>
+
+<a class="btn-floating btn-large red"><i class="fa fa-bolt"></i></a>
+<a class="btn-floating btn-small blue"><i class="fa fa-star"></i></a>
+
+<a class="btn btn-default"><i class="fa fa-magic left"></i> Left</a>
+<a class="btn btn-default">Right <i class="fa fa-magic right"></i></a>
+<!--/Start your project here-->
