--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,9 +24,67 @@
                         <a class="btn btn-primary">Button</a>
                     </div>
                     <!--/.Card content-->
+                    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+    Launch demo modal
+</button>
+
+<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-login">
+    Modal Login
+</button>
+                                
+<!-- Modal Login -->
+<div class="modal fade modal-ext" id="modal-login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <!--Content-->
+        <div class="modal-content">
+           
+            <!--Header-->
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h3><i class="fa fa-user"></i> Login</h3>
+            </div>
+            
+            <!--Body-->
+            <div class="modal-body">
+                <div class="md-form">
+                    <i class="fa fa-envelope prefix"></i>
+                    <input type="text" id="form2" class="form-control">
+                    <label for="form2">Your email</label>
+                </div>
+
+                <div class="md-form">
+                    <i class="fa fa-lock prefix"></i>
+                    <input type="password" id="form3" class="form-control">
+                    <label for="form3">Your password</label>
+                </div>
+                <div class="text-xs-center">
+                    <button class="btn btn-primary btn-lg">Login</button>
+                </div>
+            </div>
+            
+            <!--Footer-->
+            <div class="modal-footer">
+                <div class="options">
+                    <p>Not a member? <a href="#">Sign Up</a></p>
+                    <p>Forgot <a href="#">Password?</a></p>
+                </div>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+    </div>
+</div>
+<!-- /.Live preview-->
 
                 </div>
                 <!--/.Card-->
+                
+                
 
             </div>
         </div>
@@ -66,4 +124,22 @@
 
 <a class="btn btn-default"><i class="fa fa-magic left"></i> Left</a>
 <a class="btn btn-default">Right <i class="fa fa-magic right"></i></a>
+
+
+<!--Info message-->
+<a class="btn btn-info" onclick="toastr.info('Hi! I am info message.');">Info message</a>
+<!--Warning message-->
+<a class="btn btn-warning" onclick="toastr.warning('Hi! I am warning message.');">Warning message</a>
+<!--Success message-->
+<a class="btn btn-success" onclick="toastr.success('Hi! I am success message.');">Success message</a>
+<!--Error message-->
+<a class="btn btn-danger" onclick="toastr.error('Hi! I am error message.');">Error message</a>
+
+
+<div class="md-form">
+    <input placeholder="Selected date" type="text" id="date-picker-example" class="form-control datepicker">
+    <label for="date-picker-example">Try me...</label>
+</div>
+
+
 <!--/Start your project here-->
