Created homepage with MDB Pro styles

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,145 +1,49 @@
-<!--Start your project here-->                            
-<div class="container">
-    <div class="row">
+    <!--Mask-->
+    <div class="view hm-light-strong">
+        <div class="full-bg-img flex-center">
             <div class="col-md-6">
+                <ul>
+                    <li>
+                        <!--Featured Image-->
+<div class="view overlay hm-white-slight z-depth-2">
+    <%= link_to image_tag("panda2.jpg", border: 0, class: "img-fluid") %>
+    <a>
+        <div class="mask"></div>
+    </a>
+</div>
 
-                <!--Card-->
-                <div class="card">
+<!--Post data-->
+<div class="jumbotron m-1 text-xs-center">
+    <h2 class="h2-responsive">Pampered Panda</h2>
+    <hr>
+    <p>Coming soon</p>
 
-                    <!--Card image-->
-                    <div class="view overlay hm-white-slight">
-                        <img src="http://mdbootstrap.com/images/reg/reg%20(2).jpg" class="img-fluid" alt="">
-                        <a>
-                            <div class="mask"></div>
-                        </a>
-                    </div>
-                    <!--/.Card image-->
+    <!--Social shares-->
+    <div class="social-counters">
 
-                    <!--Card content-->
-                    <div class="card-block">
-                        <!--Title-->
-                        <h4 class="card-title">Card title</h4>
-                        <!--Text-->
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a class="btn btn-primary">Button</a>
-                    </div>
-                    <!--/.Card content-->
-                    <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-    Launch demo modal
-</button>
+        <!--Facebook-->
+        <a class="btn btn-fb" href="https://www.facebook.com/Pamperedpanda" target="_blank">
+            <i class="fa fa-facebook left"></i>
+            <span class="hidden-md-down">Facebook</span>
+        </a>
+        <span class="counter">7</span>
 
-<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-login">
-    Modal Login
-</button>
-                                
-<!-- Modal Login -->
-<div class="modal fade modal-ext" id="modal-login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <!--Content-->
-        <div class="modal-content">
-           
-            <!--Header-->
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                <h3><i class="fa fa-user"></i> Login</h3>
-            </div>
-            
-            <!--Body-->
-            <div class="modal-body">
-                <div class="md-form">
-                    <i class="fa fa-envelope prefix"></i>
-                    <input type="text" id="form2" class="form-control">
-                    <label for="form2">Your email</label>
-                </div>
+        <!--Twitter-->
+        <a class="btn btn-tw" href="https://twitter.com/pampered_panda" target="_blank">
+            <i class="fa fa-twitter left"></i>
+            <span class="hidden-md-down">Twitter</span>
+        </a>
+        <span class="counter">13</span>
 
-                <div class="md-form">
-                    <i class="fa fa-lock prefix"></i>
-                    <input type="password" id="form3" class="form-control">
-                    <label for="form3">Your password</label>
-                </div>
-                <div class="text-xs-center">
-                    <button class="btn btn-primary btn-lg">Login</button>
-                </div>
-            </div>
-            
-            <!--Footer-->
-            <div class="modal-footer">
-                <div class="options">
-                    <p>Not a member? <a href="#">Sign Up</a></p>
-                    <p>Forgot <a href="#">Password?</a></p>
-                </div>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+
+    </div>
+    <!--/.Social shares-->
+
+</div>
+<!--/.Post data-->
+                    </li>
+                </ul>
             </div>
         </div>
-        <!--/.Content-->
     </div>
-</div>
-    </div>
-</div>
-<!-- /.Live preview-->
-
-                </div>
-                <!--/.Card-->
-                
-                
-
-            </div>
-        </div>
-</div>
-
-<button type="button" class="btn btn-primary">Primary</button>
-
-<!-- Indicates a dangerous or potentially negative action -->
-<button type="button" class="btn btn-default">Default</button>
-
-<!-- Secondary, outline button -->
-<button type="button" class="btn btn-secondary">Secondary</button>
-
-<!-- Indicates a successful or positive action -->
-<button type="button" class="btn btn-success">Success</button>
-
-<!-- Contextual button for informational alert messages -->
-<button type="button" class="btn btn-info">Info</button>
-
-<!-- Indicates caution should be taken with this action -->
-<button type="button" class="btn btn-warning">Warning</button>
-
-<!-- Indicates a dangerous or potentially negative action -->
-<button type="button" class="btn btn-danger">Danger</button>
-
-
-<a class="btn primary-rounded-outline waves-effect">Primary</a>
-<a class="btn default-rounded-outline waves-effect">Default</a>
-<a class="btn secondary-rounded-outline waves-effect">Secondary</a>
-<a class="btn success-rounded-outline waves-effect">Success</a>
-<a class="btn info-rounded-outline waves-effect">Info</a>
-<a class="btn warning-rounded-outline waves-effect">Warning</a>
-<a class="btn danger-rounded-outline waves-effect">Danger</a>
-
-<a class="btn-floating btn-large red"><i class="fa fa-bolt"></i></a>
-<a class="btn-floating btn-small blue"><i class="fa fa-star"></i></a>
-
-<a class="btn btn-default"><i class="fa fa-magic left"></i> Left</a>
-<a class="btn btn-default">Right <i class="fa fa-magic right"></i></a>
-
-
-<!--Info message-->
-<a class="btn btn-info" onclick="toastr.info('Hi! I am info message.');">Info message</a>
-<!--Warning message-->
-<a class="btn btn-warning" onclick="toastr.warning('Hi! I am warning message.');">Warning message</a>
-<!--Success message-->
-<a class="btn btn-success" onclick="toastr.success('Hi! I am success message.');">Success message</a>
-<!--Error message-->
-<a class="btn btn-danger" onclick="toastr.error('Hi! I am error message.');">Error message</a>
-
-
-<div class="md-form">
-    <input placeholder="Selected date" type="text" id="date-picker-example" class="form-control datepicker">
-    <label for="date-picker-example">Try me...</label>
-</div>
-
-
-<!--/Start your project here-->
+    <!--/.Mask-->
