--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,7 +13,7 @@
 </div>
 
 <!--Post data-->
-<div class="jumbotron m-1 text-xs-center">
+<div class="jumbotron m-1 text-xs-center boxshadow">
     <h2 class="h2-responsive">Pampered Panda</h2>
     <hr>
     <p>Coming soon</p>
