--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Venue</h1>
+<div class="row">
+  <div class="container">
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @venue %> |
-<%= link_to 'Back', venues_path %>
+    <h1>Editing Venue</h1>
+    
+    <%= render 'form' %>
+    
+    <%= link_to 'Show', @venue %> |
+    <%= link_to 'Back', venues_path %>
+    
+  </div>
+</div>
