--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-  <div class="center">
+  <div class="container">
+
     <div class="col-md-4 col-md-offset-3">
       <h2>Sign up</h2>
 
