--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,7 +1,7 @@
 <h1 align="center">New Venue</h1>
 
 <div class="row">
-  <div class="center">
+  <div class="container">
     <div class="col-md-4 col-md-offset-3">
       <%= render 'form' %>
       <%= link_to 'Back', venues_path %>
